Upgrading to Java 24, Gradle 8.13, SpringBoot 3.4.3